--- a/src/ui/layout/Layout.js.css
+++ b/src/ui/layout/Layout.js.css
@@ -14,15 +14,6 @@
     display: none;
 }
 
-::slotted(.panel) {
-    width: 100%;
-    height: 100%;
-    padding: 5px;
-    border-style: solid;
-    border-width: 2px;
-    border-color: var(--page-border-color, #ffffff);
-}
-
 ::slotted(.error-panel) {
     width: 100%;
     height: 100%;
